# cloudkitty-tempest-plugin

./: .coveragerc  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cloudkitty_tempest_plugin/: README.rst  config.py  plugin.py
cloudkitty_tempest_plugin/services/: client.py
cloudkitty_tempest_plugin/tests/api/: base.py  test_cloudkitty_api.py  test_hashmap_api.py  test_pyscript_api.py
cloudkitty_tempest_plugin/tests/api/v1/: test_cloudkitty_api.py  test_hashmap_api.py  test_pyscript_api.py
doc/: requirements.txt
doc/source/contributor/: contributing.rst
releasenotes/notes/: drop-python38-support-70bd303e0defb9e1.yaml  service_available-54863e8472d9c943.yaml
