[metadata]
name = cloudkitty_tempest_plugin
summary = Tempest plugin for CloudKitty
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/cloudkitty-tempest-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cloudkitty_tempest_plugin

[entry_points]
tempest.test_plugins =
    cloudkitty_tests = cloudkitty_tempest_plugin.plugin:CloudkittyTempestPlugin
